k8s/apps/leachnet/ducknet/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-http
spec:
  ports:
  - name: http
    port: 9091
    targetPort: http
  selector:
    app: transmission
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-utp
spec:
  ports:
  - name: utptcp
    port: 51400
    nodePort: 51400
    protocol: TCP
    targetPort: utptcp
  - name: utpudp
    port: 51400
    nodePort: 51400
    protocol: UDP
    targetPort: utpudp
  selector:
    app: transmission
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
   - IPv4
   - IPv6
  type: NodePort
