k8s/apps/leachnet/ducknet/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-system-authentik-forward-auth@kubernetescrd
  name: transmission-http-ingress
spec:
  rules:
  - host: transmission.home.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-http
            port:
              name: http
#  - host: iptv.theleachfamily.me.uk
#    http: *http_rules
  tls:
  - hosts:
    - transmission.home.theleachfamily.me.uk
#    - transmission.svc.duck.moe
    secretName: transmission-cert
